Fix images in nav on safari

--- a/devblog/styles/Header.module.scss
+++ b/devblog/styles/Header.module.scss
@@ -47,7 +47,6 @@
           filter: invert(1);
           object-fit: contain;
           object-position: center;
-          width: 100%;
         }
 
         &.active {
